--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,10 +25,21 @@ dependencies:
     sdk: flutter
   google_maps_flutter: ^2.0.3
   geolocator: ^5.1.5
+  firebase_auth: ^1.1.0
+  firebase_core: ^1.0.3
+  firebase_storage: ^8.0.3
+  firebase_storage_web: ^1.0.3
+  cloud_firestore: ^1.0.5
+  http: ^0.13.0
+  async: ^2.0.8
+  get_it: ^3.0.0+1
+  provider: ^3.2.0
+  provider_architecture: ^1.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  permission: ^0.1.7
 
 dev_dependencies:
   flutter_test:
