--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  permission: ^0.1.7
+  fluttertoast: ^8.0.4
+  firebase_database: ^6.1.2
+  # permission: ^0.1.7
+  # location_permissions: ^3.0.0+1
+  # location: ^4.1.1
+  # permission_handler: ^6.1.3
+  # android_intent: ^2.0.0
 
 dev_dependencies:
   flutter_test:
