--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: myapp
-description: A new Flutter project.
+name: MOBEAS
+description: A mobile based emergency application for requesting an ambulance during an emergency.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -43,7 +43,7 @@ dependencies:
   firebase_database: ^6.1.2
   # permission: ^0.1.7
   # location_permissions: ^3.0.0+1
-  # location: ^4.1.1
+  #location: ^4.1.1
   # permission_handler: ^6.1.3
   # android_intent: ^2.0.0
 
@@ -66,6 +66,7 @@ flutter:
   assets:
    - assets/images/cover.png
    - assets/images/coverNav.png
+   - assets/images/heart-health.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
