--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,15 @@ dependencies:
   cupertino_icons: ^0.1.3
   fluttertoast: ^8.0.4
   firebase_database: ^6.1.2
+  # map_view: ^0.0.14
+  geocoding: ^2.0.0
+  flutter_polyline_points: ^1.0.0
+  geoflutterfire: ^3.0.0-nullsafety.2
+  url_launcher: ^6.0.3
+  # flutter_osm_plugin: ^0.7.4-nullsafety.2
   # permission: ^0.1.7
   # location_permissions: ^3.0.0+1
-  #location: ^4.1.1
+  # location: ^4.1.1
   # permission_handler: ^6.1.3
   # android_intent: ^2.0.0
 
