--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
 
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="MOBEAS"
+        android:label="MOBEAS Driver"
         android:icon="@mipmap/ic_launcher">
 
         <meta-data
